--- a/squid.yml
+++ b/squid.yml
@@ -1,25 +1,25 @@
 ---
 - name: Install and configure Squid Proxy
   hosts: all
-  become: yes
+  become: no
   gather_facts: yes
-
+ 
   tasks:
     - name: Update apt cache
       apt:
         update_cache: yes
-
+ 
     - name: Install Squid Proxy
       apt:
         name: squid
         state: present
-
+ 
     - name: Copy Squid configuration file
       template:
         src: squid.conf.j2
         dest: /etc/squid/squid.conf
       notify: Restart Squid
-
+ 
   handlers:
     - name: Restart Squid
       service:
